#-links not included

--- a/test/fixtures/html/custom_tag_selectors.html
+++ b/test/fixtures/html/custom_tag_selectors.html
@@ -17,6 +17,7 @@
     <!-- another comment 
     here -->
     <p>Some footer</p>
+    <a href="#foo">Top</a>
     <a href="/footer.html">Affe</a>
   </body>
 </html>
