--- a/test/fixtures/html/custom_tag_selectors.html
+++ b/test/fixtures/html/custom_tag_selectors.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
     <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+    <meta name="DC.title" content="Title from DC meta data" />
     <title>Sample Title</title>
   </head>
   <body>
